--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             text-overflow: ellipsis;
             height: auto; /* Ensures the dropdown adjusts to the text size */
             display: block; /* Ensure block layout for full width and height */
-            box-sizing: border-box; /* Include padding and border in element's total width and height */
+            box-sizing: border-box;
         }
 
         .header {
@@ -70,16 +70,18 @@
             justify-content: space-between;
             flex-direction: row;
             text-align: left;
+            flex-wrap: nowrap; /* Prevents sections from wrapping when resizing */
         }
 
         .left-section {
-            flex: 1;
-            max-width: 300px;
+            flex: 0 1 300px; /* Fixed width of 300px, won't shrink below this */
+            min-width: 300px; /* Ensures the section doesn't shrink smaller than 300px */
+            margin-right: 20px; /* Adds space between left and right sections */
             text-align: left;
         }
 
         .right-section {
-            flex: 2;
+            flex: 1; /* Takes up the remaining space */
             padding-left: 20px;
             text-align: left;
         }
@@ -109,6 +111,7 @@
             background-color: #f4f4f4;
             border-radius: 5px;
             text-align: left;
+            box-sizing: border-box;
         }
 
         canvas {
